--- a/index.css
+++ b/index.css
@@ -157,7 +157,7 @@ h2 {
   margin-bottom: 24px;
 }
 
-#fixed-header {
+.fixed-header {
   display: block;
   background-color: white;
   height: 78px;
@@ -171,14 +171,14 @@ h2 {
   display: none;
 }
 
-#fixed-header > div:first-child {
+.fixed-header > div:first-child {
   height: 48px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-#fixed-header-ul {
+.fixed-header-ul {
   display: flex;
   color: #aaaaaa;
   display: flex;
@@ -186,12 +186,12 @@ h2 {
   height: 100%;
 }
 
-#logo {
+.logo {
   display: none;
   padding: 0;
 }
 
-#fixed-header-ul > * {
+.fixed-header-ul > * {
   padding-left: 12px;
   font-family: Shentox, sans-serif;
   font-size: 14px;
@@ -199,15 +199,20 @@ h2 {
   padding-right: 12px;
 }
 
-#fixed-header-ul > *:first-child {
+@media (max-width: 767px) {
+  .fixed-header-ul > * {
+    display: none;
+  }
+}
+.fixed-header-ul > *:first-child {
   padding: 0;
 }
 
-#fixed-header-ul > *:nth-child(2) {
+.fixed-header-ul > *:nth-child(2) {
   padding-left: 20px;
 }
 
-#search {
+.search {
   padding-left: 16px;
   padding-right: 16px;
   height: 100%;
@@ -217,18 +222,18 @@ h2 {
   align-items: center;
 }
 
-#search * {
+.search * {
   border: 1px solid red;
 }
 
-#fixed-header > div:last-child {
+.fixed-header > div:last-child {
   height: 30px;
   background-color: #fd3;
   display: flex;
   align-items: center;
 }
 
-#fixed-header p {
+.fixed-header p {
   padding-left: 20px;
   font-size: 13px;
   font-family: "ARS Maquette", "Helvetica Neue", Arial, sans-serif;
